--- a/css/style_mahsa.css
+++ b/css/style_mahsa.css
@@ -66,3 +66,14 @@ html {
     height: 300px;
     border-radius: 20px;
 }
+
+/* Plotly plot */
+#mahsa_plotly {
+    margin: 20px;
+    border-radius: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    border: 5px block #ffffff;
+}
