--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="static/css/style.css" />
     <link href="https://fonts.cdnfonts.com/css/alien-2" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/papercutz" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/zombie-control" rel="stylesheet">
@@ -70,6 +70,6 @@
     <div id="stars2"></div>
     <div id="stars3"></div>
 
-    <script src="../plots/plot_Mahsa.js"></script>
+    <script src="static/plots/plot_Mahsa.js"></script>
   </body>
 </html>
