flask running and visualizations

--- a/templates/index_mahsa.html
+++ b/templates/index_mahsa.html
@@ -17,7 +17,7 @@
         <script src="https://cdn.plot.ly/plotly-2.25.2.min.js" charset="utf-8"></script>
         <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700'
             rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="../css/style_mahsa.css" />
+        <link rel="stylesheet" href="static/css/style_mahsa.css" />
         <link href="https://fonts.cdnfonts.com/css/alien-2" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/papercutz" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/zombie-control"
@@ -107,7 +107,7 @@
     <body> <!--website header section -->
         <div>
             <div class="jumbotron" style="text-align:center">
-                <img src="./header.gif" height="100px">
+                <img src="static/images/header.gif" height="100px">
                 <div class="gif">
                     <img id="gif" height="120" width="120"
                         src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExdHc0emdxd20xeW83N28xZ3NodjUzZjRkaGRnNDdxaHZnM3FiZmc3NiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/ygwYWMzryjq2ka87QY/giphy.gif" />
@@ -200,6 +200,6 @@
             </div>
         </div>
 
-        <script src="../plots/plot_Mahsa.js"></script>
+        <script src="static/plots/plot_Mahsa.js"></script>
     </body>
 </html>
